# greek-exam

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  add_fill_blank_translations.py  add_mc_translations.py  add_tf_translations.py  dev.db  generate_audio_dev.py  migrate_sqlite_to_postgres.py  pyproject.toml  seed_dev.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_generation_runs.py  0003_drop_placement_test.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  curriculum.py  enums.py  exercise.py  generation_run.py  progress.py  user.py  (+2 more)
backend/seed_data/: curriculum_data.py
backend/tests/: conftest.py  test_auth.py  test_conftest.py  test_curriculum.py  test_exercises.py  test_mini_test.py  test_models_import.py  test_placement_test.py  test_services.py  test_sync.py  test_vocabulary.py
pipeline/: .env.example  audio_utils.py  config.py  db.py  generate_audio.py  generate_exercises.py  generate_placement.py  import_content.py  import_new_exercise_types.py  publish_content.py  pyproject.toml  review_content.py
pipeline/generators/: claude_client.py
pipeline/prompts/: dialogue.txt  fill_blank.txt  image_description.txt  matching.txt  multiple_choice.txt  placement_test.txt  true_false.txt
pipeline/schemas/: exercise_schemas.py
pipeline/tests/: conftest.py  test_audio.py  test_claude_client.py  test_config.py  test_curriculum_data.py  test_import.py  test_schemas.py
(+254 files in other folders)
